--- a/iphone-se-webgl/wrong_images/large-v100-webgl-e492c97b6266d2e3_inv_variant_27/webgl_viewer_variant.html
+++ b/iphone-se-webgl/wrong_images/large-v100-webgl-e492c97b6266d2e3_inv_variant_27/webgl_viewer_variant.html
@@ -169,6 +169,7 @@ function trySetUniform2f(gl, shaderProgram, name, x, y) {
 </script>
 </head>
 <body onload="setTimeout(startSafe, 1000)">
+Check out our medium post about this issue <a href="https://medium.com/@afd_icl/how-to-render-garbage-on-your-iphone-213fb577d67c">here</a>.
 <div class="grid">
   <div class="row">
     <div class="cell">
