Added links to medium post.

--- a/ARM-Mali-T628-Chromebook-WebGL/wrong_images/small-v100-webgl-804943b2b630b741_inv_variant_4/webgl_viewer_recipient.html
+++ b/ARM-Mali-T628-Chromebook-WebGL/wrong_images/small-v100-webgl-804943b2b630b741_inv_variant_4/webgl_viewer_recipient.html
@@ -169,7 +169,7 @@ function trySetUniform2f(gl, shaderProgram, name, x, y) {
 </script>
 </head>
 <body onload="setTimeout(startSafe, 1000)">
-
+Check out our medium post about this issue <a href="https://medium.com/@afd_icl/bugs-can-be-beautiful-65b93c5c58f9">here</a>.
 <div class="grid">
   <div class="row">
     <div class="cell">
