--- a/samsung-galaxy-s6/wrong_images/large-v100-b997a4e1b624027b_inv_variant_47/webgl_viewer_variant.html
+++ b/samsung-galaxy-s6/wrong_images/large-v100-b997a4e1b624027b_inv_variant_47/webgl_viewer_variant.html
@@ -169,7 +169,7 @@ function trySetUniform2f(gl, shaderProgram, name, x, y) {
 </script>
 </head>
 <body onload="setTimeout(startSafe, 1000)">
-
+Check out our medium post about this issue <a href="https://medium.com/@afd_icl/bugs-can-be-beautiful-65b93c5c58f9">here</a>.
 <div class="grid">
   <div class="row">
     <div class="cell">
