--- a/samsung-galaxy-s6/wrong_images/large-v100-b997a4e1b624027b_inv_variant_47/webgl_viewer_variant.html
+++ b/samsung-galaxy-s6/wrong_images/large-v100-b997a4e1b624027b_inv_variant_47/webgl_viewer_variant.html
@@ -169,14 +169,14 @@ function trySetUniform2f(gl, shaderProgram, name, x, y) {
 </script>
 </head>
 <body onload="setTimeout(startSafe, 1000)">
-Check out our medium post about this issue <a href="https://medium.com/@afd_icl/bugs-can-be-beautiful-65b93c5c58f9">here</a>.
+<p>Check out our medium post about this issue <a href="https://medium.com/@afd_icl/bugs-can-be-beautiful-65b93c5c58f9">here</a>.</p>
 <div class="grid">
   <div class="row">
     <div class="cell">
       <canvas id="opengl-canvas" style="border: none;" width="640" height="480"></canvas>
     </div>
   </div>
-
+  <p>The injected code is shown via comments. Search for "injected:". Or, view the original shader <a href="webgl_viewer_recipient.html">here</a>.</p>
   <div class="row">
     <div class="cell shader_location_input">
       <textarea id="shader_source" placeholder="Source of fragment shader">
@@ -188,8 +188,10 @@ uniform float time;
 
 uniform vec2 mouse;
 
+// injected:
 uniform float GLF_live13time;
 
+// injected:
 float GLF_live13map()
 {
     float GLF_live13d = 1.0;
@@ -251,6 +253,7 @@ void main()
     vec3 from = vec3(0.0, 0.0, 0.0);
     
     from.x -= 5.0 * (mouse.x - 0.5);
+    // injected: (just this block)
     {
         float GLF_live13t = 1.0;
         for(int GLF_live13i = 0; GLF_live13i < 1; GLF_live13i++)
