--- a/NVIDIA-770-WebGL-ANGLE/wrong_images/slug/webgl_viewer_recipient.html
+++ b/NVIDIA-770-WebGL-ANGLE/wrong_images/slug/webgl_viewer_recipient.html
@@ -168,7 +168,7 @@ function trySetUniform2f(gl, shaderProgram, name, x, y) {
 
 </script>
 </head>
-<body>
+<body onload="setTimeout(startSafe, 1000)">
 <div class="grid">
   <div class="row">
     <div class="cell">
